changed svg to png instead. a few tweaks, now the img rotates and not the container, fixing with jumpy scroll

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,11 @@
 		height: 500px;
 		margin: 0 auto;
 		display: block;
+		overflow: hidden;
+
+		img {
+			width: 100%; 
+		}
 	}
 
 	.nav-wheel {
